# skillz

./: .gitignore  Readme.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
cantine-ecole-enfants/: SKILL.md
tidal/: SKILL.md  pyproject.toml  tidal_cli.py  tidal_session.py
tidal-api/: SKILL.md  pyproject.toml  tidal_auth.py  tidal_playlists.py  tidal_search.py  tidal_tracks.py
tidal-api/.claude-plugin/: plugin.json
tidal-api/skills/favorites/: SKILL.md
tidal-api/skills/login/: SKILL.md
tidal-api/skills/playlists/: SKILL.md
tidal-api/skills/search/: SKILL.md
transcribe/: SKILL.md  pyproject.toml  transcribe_cli.py
wiim/: SKILL.md  pyproject.toml  tidal_bridge.py  wiim_cli.py  wiim_control.py  wiim_device.py  wiim_discover.py  wiim_status.py
