[project]
name = "tidal-api"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "tidalapi>=0.8.11",
    "rich",
    "simple-parsing",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"tidal_cli.py" = "tidal_cli.py"
"tidal_session.py" = "tidal_session.py"

[project.scripts]
tidal = "tidal_cli:main"
